fix overlapping wordcloud entries

--- a/theme/src/sass/modules/_wordcloud.scss
+++ b/theme/src/sass/modules/_wordcloud.scss
@@ -27,7 +27,6 @@ body {
 
 .wordcloud {
     > * {
-        text-transform: uppercase;
         text-decoration: none;
         padding: .25rem;
     }
